--- a/React/Midudev-aprendiendoReact/Projects/package.json
+++ b/React/Midudev-aprendiendoReact/Projects/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "canvas-confetti": "1.6.0",
+    "just-debounce-it": "3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
